tests/transpiler/x/zig/group_by.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_by.zig:16:20: error: unable to infer array size
